--- a/financial-app-infrastructure.yaml
+++ b/financial-app-infrastructure.yaml
@@ -34,7 +34,7 @@ Parameters:
   Environment:
     Type: String
     Default: dev
-    AllowedValues: [dev, staging, prod]
+    AllowedValues: [dev, tes, prod]
     Description: Environment name (dev, staging, prod)
     
   ProjectName:
