--- a/financial-app-infrastructure.yaml
+++ b/financial-app-infrastructure.yaml
@@ -515,7 +515,7 @@ Resources:
   FrontendTargetGroup:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
     Properties:
-      Name: !Sub '${ProjectName}-${Environment}-frontend-tg'
+      Name: !Sub '${ProjectName}-${Environment}-fe-tg'
       Port: 80
       Protocol: HTTP
       VpcId: !Ref VPC
@@ -528,14 +528,14 @@ Resources:
       UnhealthyThresholdCount: 3
       Tags:
         - Key: Name
-          Value: !Sub '${ProjectName}-${Environment}-frontend-tg'
+          Value: !Sub '${ProjectName}-${Environment}-fe-tg'
         - Key: Environment
           Value: !Ref Environment
 
   BackendTargetGroup:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
     Properties:
-      Name: !Sub '${ProjectName}-${Environment}-backend-tg'
+      Name: !Sub '${ProjectName}-${Environment}-be-tg'
       Port: 8000
       Protocol: HTTP
       VpcId: !Ref VPC
@@ -548,7 +548,7 @@ Resources:
       UnhealthyThresholdCount: 3
       Tags:
         - Key: Name
-          Value: !Sub '${ProjectName}-${Environment}-backend-tg'
+          Value: !Sub '${ProjectName}-${Environment}-be-tg'
         - Key: Environment
           Value: !Ref Environment
 
@@ -805,7 +805,7 @@ Resources:
   FrontendTargetGroupBlue:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
     Properties:
-      Name: !Sub '${ProjectName}-${Environment}-frontend-tg-blue'
+      Name: !Sub '${ProjectName}-${Environment}-fe-blue'
       Port: 80
       Protocol: HTTP
       VpcId: !Ref VPC
@@ -818,14 +818,14 @@ Resources:
       UnhealthyThresholdCount: 3
       Tags:
         - Key: Name
-          Value: !Sub '${ProjectName}-${Environment}-frontend-tg-blue'
+          Value: !Sub '${ProjectName}-${Environment}-fe-blue'
         - Key: Environment
           Value: !Ref Environment
 
   BackendTargetGroupBlue:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
     Properties:
-      Name: !Sub '${ProjectName}-${Environment}-backend-tg-blue'
+      Name: !Sub '${ProjectName}-${Environment}-be-blue'
       Port: 8000
       Protocol: HTTP
       VpcId: !Ref VPC
@@ -838,7 +838,7 @@ Resources:
       UnhealthyThresholdCount: 3
       Tags:
         - Key: Name
-          Value: !Sub '${ProjectName}-${Environment}-backend-tg-blue'
+          Value: !Sub '${ProjectName}-${Environment}-be-blue'
         - Key: Environment
           Value: !Ref Environment
 
@@ -960,7 +960,7 @@ Resources:
         - Key: Environment
           Value: !Ref Environment
 
-  # ECS Services with CodeDeploy Controller
+  # ECS Services with Standard ECS Controller for Blue/Green Deployment
   FrontendService:
     Type: AWS::ECS::Service
     DependsOn: FrontendListener
@@ -968,23 +968,31 @@ Resources:
       ServiceName: !Sub '${ProjectName}-${Environment}-frontend-service'
       Cluster: !Ref ECSCluster
       TaskDefinition: !Ref FrontendTaskDefinition
-      DesiredCount: 2
+      DesiredCount: 1
       LaunchType: FARGATE
+      PlatformVersion: LATEST
       NetworkConfiguration:
         AwsvpcConfiguration:
-          AssignPublicIp: DISABLED
+          AssignPublicIp: ENABLED
           SecurityGroups:
             - !Ref ECSSecurityGroup
           Subnets:
-            - !Ref PrivateSubnet1
-            - !Ref PrivateSubnet2
+            - !Ref PublicSubnet1
+            - !Ref PublicSubnet2
       LoadBalancers:
         - ContainerName: frontend
           ContainerPort: 80
           TargetGroupArn: !Ref FrontendTargetGroup
       DeploymentController:
-        Type: CODE_DEPLOY
+        Type: ECS
+      DeploymentConfiguration:
+        MaximumPercent: 200
+        MinimumHealthyPercent: 50
+        DeploymentCircuitBreaker:
+          Enable: true
+          Rollback: true
       HealthCheckGracePeriodSeconds: 300
+      EnableExecuteCommand: true
       Tags:
         - Key: Name
           Value: !Sub '${ProjectName}-${Environment}-frontend-service'
@@ -998,23 +1006,31 @@ Resources:
       ServiceName: !Sub '${ProjectName}-${Environment}-backend-service'
       Cluster: !Ref ECSCluster
       TaskDefinition: !Ref BackendTaskDefinition
-      DesiredCount: 2
+      DesiredCount: 1
       LaunchType: FARGATE
+      PlatformVersion: LATEST
       NetworkConfiguration:
         AwsvpcConfiguration:
-          AssignPublicIp: DISABLED
+          AssignPublicIp: ENABLED
           SecurityGroups:
             - !Ref ECSSecurityGroup
           Subnets:
-            - !Ref PrivateSubnet1
-            - !Ref PrivateSubnet2
+            - !Ref PublicSubnet1
+            - !Ref PublicSubnet2
       LoadBalancers:
         - ContainerName: backend
           ContainerPort: 8000
           TargetGroupArn: !Ref BackendTargetGroup
       DeploymentController:
-        Type: CODE_DEPLOY
+        Type: ECS
+      DeploymentConfiguration:
+        MaximumPercent: 200
+        MinimumHealthyPercent: 50
+        DeploymentCircuitBreaker:
+          Enable: true
+          Rollback: true
       HealthCheckGracePeriodSeconds: 300
+      EnableExecuteCommand: true
       Tags:
         - Key: Name
           Value: !Sub '${ProjectName}-${Environment}-backend-service'
